Tests/typing/bad/testfile-struct-5.jl

struct S a end
function f(s::S) s.a = 1 end
